--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-simple-di",
-  "version": "0.2.2",
+  "version": "1.0.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/pilov-pa/vue-js-di.git"
   },
   "dependencies": {
-    "simple-js-di": "^0.2.1"
+    "simple-js-di": "^1.0.0"
   },
   "keywords": [
     "di"
